# rust-backend-walker-example

./: .gitignore  Cargo.toml  README.adoc
src/: http_booking_req.rest  http_dog_req.rest  http_owner_req.rest  main.rs
src/app_errors/: errors.rs
src/json_response/: README.adoc  api_responses.rs  mod.rs
src/models/: booking_model.rs  dog_model.rs  mod.rs  owner_model.rs  sitter_model.rs
src/routes/: booking_routes.rs  dog_routes.rs  mod.rs  owner_routes.rs  sitter_routes.rs
src/services/: bookings.rs  db.rs  dogs.rs  mod.rs  owners.rs  sitters.rs
src/test_http_requests/: test_api_dog_requests.http  test_api_owner_requests.http  test_api_sitter_requests.http
